--- a/PaginationEFCore/appsettings.json
+++ b/PaginationEFCore/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=ARAVIND\\SQLEXPRESS;Initial Catalog=PaginationEFCore;Integrated Security=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
